fix(btn UI): align center for smaller sreens

--- a/src/component/VMTable.module.css
+++ b/src/component/VMTable.module.css
@@ -36,6 +36,10 @@
 }
 
 @media screen and (max-width: 640px) {
+    .btn {
+        align-self: center;
+    }
+
     .table {
         overflow-x: scroll;
     }
